# LED_Matrix_software

./: .gitignore  README.md  main.py  optimization_analysis.md  optimized_example.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_image_modes.py
src/led_matrix_software/: __init__.py  main.py  matrix.py
src/led_matrix_software/devices/: __init__.py  base.py  serial_device.py  simulator.py
src/led_matrix_software/fonts/: __init__.py  base.py  chara_zenkaku.py  shinonome.py
