[project]
name = "led-matrix-software"
version = "0.1.0"
description = "LED Matrix Display Software with Shinonome Font"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numba>=0.63.1",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "pyserial>=3.5",
    "taichi>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[project.scripts]
led-matrix = "led_matrix_software.main:main"
